src/main/resources/Krakatau-master/tests/assembler/bad/nosuper.j
.class public whocares
.end class
